--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/react-text-mask": "^5.4.11",
         "@x1mrdonut1x/nouislider-react": "^3.4.3",
         "apexcharts": "^3.37.1",
+        "axios": "^1.6.2",
         "bootstrap": "^5.3.2",
         "easymde": "^2.18.0",
         "formik": "^2.2.9",
