--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@mantine/core": "^5.10.5",
         "@mantine/hooks": "^5.10.5",
         "@mui/material": "^5.14.20",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.7",
         "@popperjs/core": "^2.11.6",
         "@reduxjs/toolkit": "^1.8.5",
         "@testing-library/jest-dom": "^5.16.5",
@@ -32,12 +33,8 @@
         "@types/react-text-mask": "^5.4.11",
         "@x1mrdonut1x/nouislider-react": "^3.4.3",
         "apexcharts": "^3.37.1",
-        "bootstrap": "^5.3.2",
-        "easymde": "^2.18.0",
-        "formik": "^2.2.9",
-        "highlight.js": "^11.6.0",
-        "nouislider-react": "^3.4.1",
         "axios": "^1.6.2",
+        "bootstrap": "^5.3.2",
         "easymde": "^2.18.0",
         "formik": "^2.2.9",
         "highlight.js": "^11.6.0",
@@ -65,6 +62,7 @@
         "react-text-mask": "^5.5.0",
         "react-toastify": "^9.1.3",
         "sortablejs": "^1.15.0",
+        "styled-components": "^6.1.1",
         "sweetalert2": "^11.6.8",
         "sweetalert2-react-content": "^5.0.7",
         "swiper": "^8.4.4",
