--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "easymde": "^2.18.0",
         "formik": "^2.2.9",
         "highlight.js": "^11.6.0",
+        "lodash": "^4.17.21",
         "mantine-datatable": "^1.7.17",
         "nouislider-react": "^3.4.1",
         "react": "^18.2.0",
@@ -51,6 +52,7 @@
         "react-export-table-to-excel": "^1.0.6",
         "react-flatpickr": "^3.10.13",
         "react-images-uploading": "^3.1.7",
+        "react-number-format": "^5.3.1",
         "react-popper": "^2.3.0",
         "react-quill": "^2.0.0",
         "react-redux": "^8.0.4",
