--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "swiper": "^8.4.4",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.3",
