--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.5.8",
     "react-simplemde-editor": "^5.2.0",
     "react-sortablejs": "^6.1.4",
@@ -68,7 +68,7 @@
     "sweetalert2": "^11.6.8",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^8.4.4",
-    "typescript": "^5.3.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
