--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "apexcharts": "^3.37.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "clsx": "^2.0.0",
     "easymde": "^2.18.0",
     "formik": "^2.2.9",
     "highlight.js": "^11.6.0",
